# http-server

./: .gitignore  Makefile  Makefile.am  README  README.md  configure.ac
routes/: error.sqd3  hello.sqd3  outrotest.sqd3
src/: Makefile  Makefile.am  main.c  protocol.c  protocol.h  sqd3.c  sqd3.h  worker.c  worker.h
tests/: Makefile.am  protocol.c
